@@ -9,37 +9,51 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
-
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-
+/**
+ * Some javadoc.
+ * @author Vuong
+ * @since 20/11/2022
+ * @deprecated Some javadoc.
+ */
+@SuppressWarnings("checkstyle:Indentation")
 @EnableSwagger2
 @Configuration
 public class SwaggerConfig {
 
+
     private ApiKey apiKey() {
         return new ApiKey("JWT", "Authorization", "header");
     }
+
     private ApiInfo apiInfo() {
         return new ApiInfo(
-                "Book-Tickets REST API",
+                "Student-score-manager REST API",
                 "Some custom description of API.",
                 "1.0",
                 "Terms of service",
-                new Contact("CD CNTT", "", "vuongnguyendo2709@gmail.com"),
+                new Contact("CD CN", "", "vuongnguyendo2709@gmail.com"),
                 "License of API",
                 "API license URL",
                 Collections.emptyList());
     }
 
+    /**
+     * Some javadoc. // OK
+     *
+     * @author Vuong
+     * @since 20/11/2022
+     * @serialData
+     * @deprecated Some javadoc.
+     */
     @Bean
     public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
                 .apiInfo(apiInfo())
-                .securityContexts(Arrays.asList(securityContext()))
-                .securitySchemes(Arrays.asList(apiKey()))
+                .securityContexts(Collections.singletonList(securityContext()))
+                .securitySchemes(List.of(apiKey()))
                 .select()
                 .apis(RequestHandlerSelectors.any())
                 .paths(PathSelectors.any())
@@ -50,10 +64,13 @@ public class SwaggerConfig {
     }
 
     private List<SecurityReference> defaultAuth() {
-        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
-        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
+        AuthorizationScope authorizationScope =
+                new AuthorizationScope("global", "accessEverything");
+        AuthorizationScope[] authorizationScopes =
+                new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+        return List.of(new SecurityReference("JWT",
+                authorizationScopes));
     }
 
 }
